header ui completed

--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -1,1 +1,25 @@
-<p>header works!</p>
+<div class="book-store-header-cnt">
+  <div class="book-store-header-left-cnt">
+    <div class="book-store-header-logo">
+      <img src="../../../assets/logo/logo.png" alt="" />
+      <span>Bookstore</span>
+    </div>
+    <div class="header-searchbar">
+      <mat-icon svgIcon="search"></mat-icon>
+      <input type="text" name="" id="" placeholder="Search..." class="" />
+    </div>
+  </div>
+
+  <div class="book-store-header-right-cnt">
+    <div class="book-store-header-btns">
+      <div class="header-btns">
+        <mat-icon svgIcon="profile"></mat-icon>
+        <button>Profile</button>
+      </div>
+      <div class="header-btns">
+        <mat-icon svgIcon="cart"></mat-icon>
+        <button>Cart</button>
+      </div>
+    </div>
+  </div>
+</div>
