book-details UI added

--- a/src/app/components/book-details/book-details.component.html
+++ b/src/app/components/book-details/book-details.component.html
@@ -1,1 +1,147 @@
-<p>book-details works!</p>
+<div class="book-details-outer-cnt">
+  <div class="book-details-routes">
+    <span>Home / </span> <span>Book(01)</span>
+  </div>
+
+  <div class="book-details-inner-cnt">
+    <div class="book-details-cnt">
+      <div class="small-pic-cnt">
+        <img
+          src="../../../assets/book-images/small-images/Image 1.png"
+          alt=""
+        />
+        <img
+          src="../../../assets/book-images/small-images/Image 46.png"
+          alt=""
+        />
+      </div>
+      <div class="book-details-left-cnt">
+        <img
+          class="image"
+          src="../../../assets/book-images/Image 11.png"
+          alt=""
+        />
+        <div class="book-details-left-cnt-btns">
+          <button class="add-to-bag-btn">ADD TO BAG</button>
+          <button class="wishlist-btn">
+            <mat-icon svgIcon="fav"></mat-icon>
+            WISHLIST
+          </button>
+        </div>
+      </div>
+      <div class="book-details-right-cnt">
+        <div class="book-details-upper-cnt">
+        <div
+          class="book-title"
+          style="
+            text-align: left;
+            font: normal normal normal 28px/37px Roboto;
+            letter-spacing: 0px;
+            color: #0a0102;
+            opacity: 1;
+          "
+        >
+          Don't Make Me Think
+        </div>
+        <div
+          class="book-seller"
+          style="
+          margin-top: 5px;
+            text-align: left;
+            font: normal normal normal 18px/24px Roboto;
+            letter-spacing: 0px;
+            color: #878787;
+            opacity: 1;
+          "
+        >
+          By Steve Krug
+        </div>
+        <div class="book-rating">
+          <span>4.5 <mat-icon svgIcon="star"></mat-icon>
+            
+        </span>
+        
+        </div>
+        <div class="book-price">
+          <p>Rs. 1500</p>
+        </div>
+    </div>
+        <hr />
+        <div class="book-description">
+          <p style="color: grey; height: 20px; width: 100%">
+            <mat-icon svgIcon="bullet"></mat-icon> Book Detail
+          </p>
+          <p>
+            Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quis
+            voluptatum iste ex quidem beatae cupiditate, mollitia officiis aut
+            voluptatibus modi reiciendis voluptas consectetur hic est. Dolorum
+            optio assumenda autem accusamus, numquam velit laudantium? Modi,
+            ipsum.
+          </p>
+        </div>
+        <hr />
+        <div class="book-customer-feedback">
+          <h2>Customer Feedback</h2>
+          <div class="input-feedback">
+            <p style="margin: 0">Overall rating</p>
+            <div class="star-icons">
+              <mat-icon svgIcon="star"></mat-icon>
+              <mat-icon svgIcon="star"></mat-icon
+              ><mat-icon svgIcon="star"></mat-icon
+              ><mat-icon svgIcon="star"></mat-icon
+              ><mat-icon svgIcon="star"></mat-icon>
+            </div>
+            <input type="text" placeholder="Write a review..." />
+            <div class="submit-btn"><button>Submit</button></div>
+          </div>
+          <div class="customer-reviews">
+            <div class="review-details">
+              <div class="user">
+                <div class="initials">AC</div>
+                <div class="name">Aniket Chile</div>
+              </div>
+              <div class="user-rating">
+                <mat-icon svgIcon="gold-star"></mat-icon>
+                <mat-icon svgIcon="gold-star"></mat-icon>
+                <mat-icon svgIcon="gold-star"></mat-icon>
+                <mat-icon svgIcon="gold-star"></mat-icon>
+                <mat-icon svgIcon="star"></mat-icon>
+              </div>
+              <div class="user-review">
+                <p>
+                  Lorem, ipsum dolor sit amet consectetur adipisicing elit.
+                  Molestiae nulla ratione laudantium laborum voluptates labore
+                  sequi, culpa dolorem vero eum placeat doloremque praesentium
+                  explicabo dolor vel, enim ab quod totam temporibus nisi natus
+                  fugit magni. Possimus?
+                </p>
+              </div>
+            </div>
+            <div class="review-details">
+              <div class="user">
+                <div class="initials">AC</div>
+                <div class="name">Aniket Chile</div>
+              </div>
+              <div class="user-rating">
+                <mat-icon svgIcon="gold-star"></mat-icon>
+                <mat-icon svgIcon="gold-star"></mat-icon>
+                <mat-icon svgIcon="gold-star"></mat-icon>
+                <mat-icon svgIcon="star"></mat-icon>
+                <mat-icon svgIcon="star"></mat-icon>
+              </div>
+              <div class="user-review">
+                <p>
+                  Lorem, ipsum dolor sit amet consectetur adipisicing elit.
+                  Molestiae nulla ratione laudantium laborum voluptates labore
+                  sequi, culpa dolorem vero eum placeat doloremque praesentium
+                  explicabo dolor vel, enim ab quod totam temporibus nisi natus
+                  fugit magni. Possimus?
+                </p>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
+</div>
