book-details ui updated

--- a/src/app/components/book-details/book-details.component.html
+++ b/src/app/components/book-details/book-details.component.html
@@ -31,41 +31,44 @@
       </div>
       <div class="book-details-right-cnt">
         <div class="book-details-upper-cnt">
-        <div
-          class="book-title"
-          style="
-            text-align: left;
-            font: normal normal normal 28px/37px Roboto;
-            letter-spacing: 0px;
-            color: #0a0102;
-            opacity: 1;
-          "
-        >
-          Don't Make Me Think
+          <div
+            class="book-title"
+            style="
+              text-align: left;
+              font: normal normal normal 28px/37px Roboto;
+              letter-spacing: 0px;
+              color: #0a0102;
+              opacity: 1;
+            "
+          >
+            Don't Make Me Think
+          </div>
+          <div
+            class="book-seller"
+            style="
+              margin-top: 5px;
+              text-align: left;
+              font: normal normal normal 18px/24px Roboto;
+              letter-spacing: 0px;
+              color: #878787;
+              opacity: 1;
+            "
+          >
+            By Steve Krug
+          </div>
+          <div class="book-rating-cnt" style="display: flex; align-items: center; gap: 1rem;">
+            <div class="book-rating">
+              <span>4.5 <mat-icon svgIcon="star"></mat-icon> </span>
+            </div>
+            <p style="color: #878787;">(20)</p>
+          </div>
+          <div class="book-price">
+            <p class="price">Rs. 1500</p>
+            <p style="text-decoration: line-through; color: #878787">
+              Rs. 2000
+            </p>
+          </div>
         </div>
-        <div
-          class="book-seller"
-          style="
-          margin-top: 5px;
-            text-align: left;
-            font: normal normal normal 18px/24px Roboto;
-            letter-spacing: 0px;
-            color: #878787;
-            opacity: 1;
-          "
-        >
-          By Steve Krug
-        </div>
-        <div class="book-rating">
-          <span>4.5 <mat-icon svgIcon="star"></mat-icon>
-            
-        </span>
-        
-        </div>
-        <div class="book-price">
-          <p>Rs. 1500</p>
-        </div>
-    </div>
         <hr />
         <div class="book-description">
           <p style="color: grey; height: 20px; width: 100%">
