--- a/src/app/components/book-details/book-details.component.scss
+++ b/src/app/components/book-details/book-details.component.scss
@@ -1,6 +1,6 @@
 .book-details-outer-cnt {
-    width: 100%;
-    height: 100%;
+    width: 88%;
+    height: auto;
     padding-left: 12%;
     padding-top: 20px;
     display: flex;
@@ -26,7 +26,7 @@
 }
 
 .book-details-left-cnt {
-    width: 30%;
+    width: 35%;
 
     display: flex;
     flex-direction: column;
@@ -72,7 +72,7 @@
 }
 
 .book-details-right-cnt {
-    width: 50%;
+    width: 70%;
     // margin-right: 100px;
     margin-left: 20px;
 }
@@ -99,11 +99,16 @@
     height: 12px;
     width: 12px;
 }
+.book-price{
+    display: flex;
+    gap: 2rem;
+}
 
-.book-price {
+.book-price .price{
     font-size: 30px;
     font-weight: bold;
     display: flex;
+    
 }
 
 .book-description {
