--- a/src/app/components/books-container/books-container.component.html
+++ b/src/app/components/books-container/books-container.component.html
@@ -1,1 +1,26 @@
-<p>books-container works!</p>
+
+<div class="books-container-main">
+
+    <div class="books-container-header">
+        <div class="books-container-header-books">
+            <h1>Books</h1>
+            <p>({{BooksList.length}} items)</p>
+        </div>
+        <div class="books-container-header-filter">
+            
+        <select name="" id="">
+            <option value="">Sort by relevance</option>
+            <option value="price-low-high">Price : Low to High</option>
+            <option value="price-high-low">Price: High to Low</option>
+            <option value="rating">Rating</option>
+        </select>
+
+        </div>
+    </div>
+    
+    <div class="books-container-display-cards">
+        <div *ngFor="let bookData of BooksList" class="books-container-cards">
+            <app-book-card [bookDetails]="bookData"></app-book-card>
+        </div>
+    </div>
+</div>
