--- a/src/app/components/profile/profile.component.html
+++ b/src/app/components/profile/profile.component.html
@@ -1,1 +1,76 @@
-<p>profile works!</p>
+<div class="profile-main-ctn">
+
+
+    <div class="profile-main-personalDetails">
+        <div class="profile-main-personalDetails-heading">
+            <h1 class="heading-main">Personal Details</h1>
+            <p class="edit">Edit</p>
+        </div>
+        <div class="profile-main-personalDetails-subctn">
+            <p class="profile-main-personalDetails-subtitle">Full Name</p>
+            <input type="text" placeholder="Enter Your Name">
+        </div>
+        <div class="profile-main-personalDetails-subctn">
+            <p class="profile-main-personalDetails-subtitle">Email Id</p>
+            <input type="text" placeholder="Enter Your Name">
+        </div>
+        <div class="profile-main-personalDetails-subctn">
+            <p class="profile-main-personalDetails-subtitle">Password</p>
+            <input type="password" placeholder="">
+        </div>
+        <div class="profile-main-personalDetails-subctn">
+            <p class="profile-main-personalDetails-subtitle">Mobile Number</p>
+            <input type="number" placeholder="999999999">
+        </div>
+    </div>
+
+
+    <div class="profile-main-address-Details">
+        <div class="profile-main-address-Details-header">
+            <h1>Address Details</h1>
+            <div class="profile-main-address-Details-header-sub">Add New Address</div>
+        </div>
+        <div class="profile-main-address-Details-Subheader">
+            <h2>1. Work</h2>
+            <p style="color: #A03037;">Edit</p>
+        </div>
+        <div class="profile-main-address-Details-main">
+            <p >Address</p>
+            <input type="text" placeholder="Mumbai">
+        </div>
+        <div class="profile-main-address-Details-sub">
+            <div class="profile-main-address-Details-sub2">
+                <p>City/town</p>
+                <input type="text" placeholder="Mumbai">
+            </div>
+            <div class="profile-main-address-Details-sub2">
+                <p>State</p>
+                <input type="text" placeholder="Mumbai">
+            </div>
+
+        </div>
+        <div class="profile-main-address-Details-worktype">
+            <p>Type</p>
+           <div class="profile-main-address-Details-worktype-radio">
+           <div>
+            <input type="radio" id="home" name="location" value="home">
+            <label for="home">Home</label>
+           </div>
+            
+          <div>  
+            <input type="radio" id="work" name="location" value="work">
+            <label for="work">Work</label>
+          </div>
+            
+            <div>
+                <input type="radio" id="other" name="location" value="other">
+            <label for="other">Other</label>
+            </div>
+           </div>
+        </div>
+
+
+    </div>
+
+
+</div>
