--- a/src/app/components/header/header.component.scss
+++ b/src/app/components/header/header.component.scss
@@ -39,7 +39,7 @@
 
 
 mat-icon{
-    color: #9D9D9D;
+    // color: black;
     width: 20px;
     height: 20px;
 }
@@ -83,6 +83,29 @@ mat-icon{
     width: 100%;
     background-color: #A03037;
     color: white;
+}
+.header-mat-menu-inner-cnt .menu-button-item{
+    background-color: white;
+    border: none;
+    display: flex;
+    align-items: center;
+    gap: 0.5rem;
+    height: 25px;
+}
+button.login{
+    border: 1px solid #A03037;
+    width: 100%;
+    height: 25px;
+    margin-top: 10px;
+    color: #A03037;
+}
+
+button.logout{
+    border: 1px solid #A03037;
+    width: 100%;
+    height: 30px;
+    margin-top: 10px;
+    color: #A03037;
 }
 
 @media (min-width:300px) and (max-width:720px){
