--- a/src/app/components/book-details/book-details.component.scss
+++ b/src/app/components/book-details/book-details.component.scss
@@ -1,7 +1,8 @@
 .book-details-outer-cnt {
-    width: 88%;
+    // width: 100%;
     height: auto;
     padding-left: 12%;
+    padding-right: 12%;
     padding-top: 20px;
     display: flex;
     flex-direction: column;
@@ -10,8 +11,7 @@
 
 .book-details-inner-cnt {
     margin-top: 20px;
-    display: flex;
-    width: 76%;
+    width: 100%;
 }
 
 .small-pic-cnt {
@@ -21,13 +21,16 @@
 }
 
 
+
 .book-details-cnt {
     display: flex;
+    flex-direction: row;
+    justify-content: center;
 }
 
 .book-details-left-cnt {
-    width: 35%;
-
+    width: 50%;
+    height: 360px;
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -41,14 +44,14 @@
 }
 
 .small-pic-cnt img {
-    width: 100%;
+    width: 30px;
     height: 44px;
 }
 
 .book-details-left-cnt-btns {
     margin-top: 20px;
     display: flex;
-    width: 100%;
+    width: 86%;
     justify-content: space-between;
 
 }
@@ -72,15 +75,18 @@
 }
 
 .book-details-right-cnt {
-    width: 70%;
+    width: 100%;
+    padding-right: 15%;
     // margin-right: 100px;
     margin-left: 20px;
 }
-.book-details-upper-cnt{
+
+.book-details-upper-cnt {
     display: flex;
     flex-direction: column;
-    
+
 }
+
 .book-rating {
     margin-top: 5px;
     margin-bottom: 10px;
@@ -99,16 +105,17 @@
     height: 12px;
     width: 12px;
 }
-.book-price{
+
+.book-price {
     display: flex;
     gap: 2rem;
 }
 
-.book-price .price{
+.book-price .price {
     font-size: 30px;
     font-weight: bold;
     display: flex;
-    
+
 }
 
 .book-description {
@@ -131,7 +138,7 @@
     display: flex;
     flex-direction: column;
     gap: 10px;
-    background: #F5F5F5 ;
+    background: #F5F5F5;
     border-radius: 2px;
     opacity: 0.63;
 }
@@ -150,45 +157,79 @@
     color: white;
 }
 
-.submit-btn{
+.input-feedback button:hover {
+    background-color: darkblue;
+}
+.submit-btn {
     display: flex;
     height: 27px;
     justify-content: flex-end;
 }
 
-.review-details{
+.review-details {
     display: flex;
     flex-direction: column;
 }
 
-.user{
+.user {
     display: flex;
+    height: 25px;
     align-items: center;
     gap: 0.8rem;
 }
 
-.initials{
+.mat-icon {
+    overflow: visible
+}
+
+.initials {
     height: 25px;
     width: 25px;
-    border: 1px solid grey;
+    font-weight: bold;
+    color: #707070;
+    border: 1px solid #707070;
+    background-color: #F5F5F5;
     display: flex;
     justify-content: center;
     align-items: center;
-    padding: 3px;
+    //     padding: 3px;
     border-radius: 100%;
 }
 
-.name{
+// .initials p{
+//     color: #F5F5F5;
+// }
+
+.name {
     font-size: 16px;
 }
-.user-rating{
+
+.user-rating {
     padding-left: 2.7rem;
-}
-.user-rating mat-icon{
-    width: 16px;
-    height: 16px;
 }
 
-.user-review{
+.user-rating mat-icon {
+    width: 18px;
+    height: 18px;
+}
+
+.user-review {
     padding-left: 2.7rem;
+    color: #707070;
+}
+
+.input-rating:hover {
+    color: gold;
+}
+
+.gold-star{
+    color: gold;
+}
+
+.grey-star{
+    color: #707070;
+}
+
+.input-rating:hover{
+    color: gold;
 }
