header functionality added

--- a/src/app/components/book-details/book-details.component.html
+++ b/src/app/components/book-details/book-details.component.html
@@ -23,7 +23,7 @@
         />
         <div class="book-details-left-cnt-btns">
           <button class="add-to-bag-btn">ADD TO BAG</button>
-          <button class="wishlist-btn">
+          <button class="wishlist-btn" (click)="handleWishlistBtn()">
             <mat-icon svgIcon="fav"></mat-icon>
             WISHLIST
           </button>
