book-details feature updated

--- a/src/app/components/book-details/book-details.component.html
+++ b/src/app/components/book-details/book-details.component.html
@@ -27,6 +27,9 @@
             <mat-icon svgIcon="fav"></mat-icon>
             WISHLIST
           </button>
+          <div class="quantity-btns" #elsePart>
+
+          </div>
         </div>
       </div>
       <div class="book-details-right-cnt">
