--- a/src/app/components/book-details/book-details.component.scss
+++ b/src/app/components/book-details/book-details.component.scss
@@ -74,6 +74,9 @@
     background-color: #333333;
 }
 
+.book-details-left-cnt .wishlist-btn:hover{
+    background-color: #707070;
+}
 .book-details-right-cnt {
     width: 100%;
     padding-right: 15%;
