Designed a responsive UI of Order List

--- a/src/app/components/order-list/order-list.component.html
+++ b/src/app/components/order-list/order-list.component.html
@@ -1,1 +1,58 @@
-<p>order-list works!</p>
+<div class="card2" >
+
+    <div class="img-head">
+    <img class="img" width="80px" src="../../../assets/book-images/Image 11.png" alt="">
+     
+    <div class="item-details">
+        
+        <h3>Dont Make Me Think</h3>
+        <p> By Steve Kings</p>
+        <strong>Rs. 1500</strong>
+    </div>
+</div>
+
+<div class="order-status">
+
+    <strong>🟢Order Placed On May 21</strong>
+
+</div>
+  </div>
+
+  <div class="card3" >
+
+    <div class="img-head">
+    <img class="img" width="80px" src="../../../assets/book-images/Image 11.png" alt="">
+     
+    <div class="item-details">
+        
+        <h3>Dont Make Me Think</h3>
+        <p> By Steve Kings</p>
+        <strong>Rs. 1500</strong>
+    </div>
+</div>
+
+<div class="order-status">
+
+    <strong>🟢Order Placed On May 21</strong>
+
+</div>
+  </div>
+  <div class="card3" >
+
+    <div class="img-head">
+    <img class="img" width="80px" src="../../../assets/book-images/Image 11.png" alt="">
+     
+    <div class="item-details">
+        
+        <h3>Dont Make Me Think</h3>
+        <p> By Steve Kings</p>
+        <strong>Rs. 1500</strong>
+    </div>
+</div>
+
+<div class="order-status">
+
+    <strong>🟢Order Placed On May 21</strong>
+
+</div>
+  </div>
