Developed The Order Placed Component and made it responsive

--- a/src/app/components/order-placed/order-placed.component.html
+++ b/src/app/components/order-placed/order-placed.component.html
@@ -1,1 +1,34 @@
-<p>order-placed works!</p>
+<div class="order-placed">
+    <div class="img">
+        <img src="../../../assets/Order-placed.png" width="300px" alt="">
+    </div>
+    <div class="order-msg">
+
+        <h3>Hurrayy!! Your order is confirmed <br>
+             Your order ID is #12345 save  the ID for further communication</h3>
+         
+        
+    </div>
+    <div class="order-details">
+
+
+        <table class="contact-table">
+            <tr>
+                <th>Email Us</th>
+                <th>Contact Us</th>
+                <th>Address</th>
+            </tr>
+            <tr>
+                <td>adminbookstore.com</td>
+                <td>+91 8147367881</td>
+                <td>42, 4th Main, 15th Cross, Sector 4, opp to BDA complex, near Kumarakom restaurant, HSR Layout, Bangalore 560034</td>
+            </tr>
+        </table>
+    </div>
+    <div class="btn">
+
+        <button class="Order">
+            Continue Shopping
+        </button>
+    </div>
+</div>
