--- a/src/app/components/book-cart/book-cart.component.scss
+++ b/src/app/components/book-cart/book-cart.component.scss
@@ -264,7 +264,7 @@ flex-direction: row;
     margin-bottom: 5%;
     background-color: #00a619 ;
   }
-  .Order2{
+  .Order{
     align-self: center;
     margin-top: 10%;
     margin-bottom: 5%;
