--- a/src/app/components/footer/footer.component.html
+++ b/src/app/components/footer/footer.component.html
@@ -1,3 +1,3 @@
-<!-- <div class="footer">
+<div class="footer">
     <h3 style="   font-size: 10px;">Copyright &copy 2020 Bookstore Private Limited. All Rights Reserved</h3>
-    </div> -->
+    </div>
