--- a/src/app/components/book-cart/book-cart.component.html
+++ b/src/app/components/book-cart/book-cart.component.html
@@ -183,6 +183,6 @@
 
 <br><br>
 <br><br>
-<div class="footer">
+<!-- <div class="footer">
 <h3 style="   font-size: 10px;">Copyright &copy 2020 Bookstore Private Limited. All Rights Reserved</h3>
-</div>
+</div> -->
