--- a/src/app/components/footer/footer.component.scss
+++ b/src/app/components/footer/footer.component.scss
@@ -5,6 +5,7 @@
     padding: 1%;
     color: rgb(204, 204, 204);
     padding-left: 10%;
+    margin-top: 10%;
 }
 
 /* Media query for devices with a max width of 768px (tablets and smaller) */
