--- a/src/app/components/header/header.component.scss
+++ b/src/app/components/header/header.component.scss
@@ -14,9 +14,9 @@
     padding-left: 12%;
 }
 
-.book-store-header-right-cnt{
+.book-store-header-right-cnt {
     width: 20%;
-    padding-right: 10%;  
+    padding-right: 10%;
 }
 
 .book-store-header-logo {
@@ -38,13 +38,13 @@
 }
 
 
-mat-icon{
+mat-icon {
     // color: black;
     width: 20px;
     height: 20px;
 }
 
-.header-searchbar{
+.header-searchbar {
     display: flex;
     width: 100%;
     height: 28px;
@@ -54,7 +54,8 @@ mat-icon{
     align-items: center;
     border-radius: 5px;
 }
-.header-searchbar input{
+
+.header-searchbar input {
     border: none;
     color: #9D9D9D;
     outline: none;
@@ -65,6 +66,10 @@ mat-icon{
     display: flex;
 }
 
+.header-btns:hover{
+    background-color: darkred;
+}
+
 .header-btns {
     display: flex;
     flex-direction: column;
@@ -72,6 +77,7 @@ mat-icon{
     justify-content: center;
     align-items: center;
     color: white;
+    background-color: #A03037;
     border-left: 1px solid darkred;
     border-right: 1px solid darkred;
     height: 59px;
@@ -81,10 +87,20 @@ mat-icon{
 .header-btns button {
     border: none;
     width: 100%;
-    background-color: #A03037;
+    height: 20px;
     color: white;
+    background-color: transparent;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
 }
-.header-mat-menu-inner-cnt .menu-button-item{
+
+
+
+
+
+.header-mat-menu-inner-cnt .menu-button-item {
     background-color: white;
     border: none;
     display: flex;
@@ -92,7 +108,8 @@ mat-icon{
     gap: 0.5rem;
     height: 25px;
 }
-button.login{
+
+button.login {
     border: 1px solid #A03037;
     width: 100%;
     height: 25px;
@@ -100,7 +117,7 @@ button.login{
     color: #A03037;
 }
 
-button.logout{
+button.logout {
     border: 1px solid #A03037;
     width: 100%;
     height: 30px;
@@ -108,23 +125,23 @@ button.logout{
     color: #A03037;
 }
 
-@media (min-width:300px) and (max-width:720px){
+@media (min-width:300px) and (max-width:720px) {
 
-    .book-store-header-cnt{
+    .book-store-header-cnt {
         padding: 0px 0px 0px 20px;
         width: 100%;
     }
 
-    .book-store-header-right-cnt{
+    .book-store-header-right-cnt {
         padding: 0;
         margin: 0;
         width: 30%;
     }
 
-    .book-store-header-left-cnt{
+    .book-store-header-left-cnt {
         padding: 0;
         width: 70%;
     }
 
-    
+
 }
