--- a/src/app/components/books-container/books-container.component.scss
+++ b/src/app/components/books-container/books-container.component.scss
@@ -57,6 +57,10 @@
   .paginator button:hover {
     background-color: #e0e0e0;
   }
+ select{
+    padding: 5%;
+    align-content: center;
+ }
   
   mat-paginator {
     margin-top: 20px;
