--- a/src/app/components/book-card/book-card.component.html
+++ b/src/app/components/book-card/book-card.component.html
@@ -1,16 +1,17 @@
 <div class="book-card-main">
     <div class="book-card-main-img">
-        <img src="../../../assets/think-book.png" alt="">
+        <img [src]="randomImage" alt="">
 
     </div>
     <div class="book-card-main-content">
         <p class="book-card-main-content-heading">{{bookDetails.bookName}}</p>
         <p class="book-card-main-content-author">by {{bookDetails.author}}</p>
         <div class="book-card-main-content-rating">
-            <div class="book-card-main-content-rating-ctn">
-                4.5
+            <div class="book-card-main-content-rating-ctn" >
+                {{ getAvgRating() }}
+                <mat-icon svgIcon="star-fill"  ></mat-icon>
             </div>
-            <p>(20)</p>
+            <p>({{feedbackList.length}})</p>
         </div>
         <div class="book-card-main-content-price">
             <span class="book-card-main-content-price-main">Rs. {{bookDetails.discountPrice}}</span>
